--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">LOGO</a>
+                <a class="navbar-brand glyphicon glyphicon-home" href="#"></a>
             </div>
             <div class="collapse navbar-collapse" id="collapsenavbar">
                 <ul class="nav navbar-nav">
